# n_queens_omp

./: .gitignore  CMakeLists.txt
old/: n_queens_omp.cc
src/: main.cc  n_queens_sim.cc  n_queens_sim.h
